<resources>
    <string name="app_name">Sanal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sanal</string>
    <string name="nav_header_subtitle">Fire Extinguisher Inspection</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Clients</string>
    <string name="menu_building">Buildings</string>
    <string name="menu_extinguisher">Extinguisher</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_signOut">Sign Out</string>


    <string name="server_client_id">335511299747-3eicbvebos6e5ard3d5jd1po34otq1ig.apps.googleusercontent.com</string>


    <!-- Button Text -->
    <string name="signInButton">Sign In</string>
    <string name="signOutButton">Sign Out</string>

    <!-- Client Text -->
    <string name="clientTitle">Please Add a Client</string>
    <string name="clientName">Client Name</string>
    <string name="clientPhone">Client Name</string>
    <string name="clientAddress">Client Name</string>
    <string name="clientEmail">Client Email</string>

    <!-- Building Text -->
    <string name="buildingName">Building Name</string>
    <string name="buildingAddress">Building Address</string>
    <string name="buildingCity">Building City</string>
    <string name="buildingPostalCode">Building Postal Code</string>

    <!-- Extinguisher Text -->
    <string name="extinguisherMake">Make</string>
    <string name="extinguisherSerialNumber">Serial Number</string>
    <string name="extinguisherBarcode">Barcode</string>
    <string name="extinguisherArea">Area</string>
    <string name="extinguisherLocation">Location</string>
    <string name="extinguisherType">Type</string>
    <string name="extinguisherRating">Rating</string>
    <string name="extinguisherSize">Size</string>
    <string name="extinguisherMDate">Manufacture Date</string>
    <string name="extinguisherHDate">H-Test Date</string>
    <string name="extinguisherSDate">Serviced Date</string>
    <string name="extinguisherNSDate">Next Service Date</string>
    <string name="extinguisherComment">Comment</string>
    <string name="extinguisherStatus">Status</string>

    <!-- FloatingActionButton Menu -->
    <string name="AddBuilding">Add Building</string>
    <string name="AddExtinguisher">Add Extinguisher</string>
    <string name="GeneratePDF">Generate PDF</string>
</resources>
