<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.allanlin97.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_building"
        android:name="com.allanlin97.ui.building.BuildingFragment"
        android:label="@string/menu_building"
        tools:layout="@layout/fragment_building" />

    <fragment
        android:id="@+id/nav_extinguisher"
        android:name="com.allanlin97.ui.extinguisher.ExtinguisherFragment"
        android:label="@string/menu_extinguisher"
        tools:layout="@layout/fragment_extinguisher" />

</navigation>